--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,14 @@ dependencies:
   permission_handler: ^11.3.0
   path: ^1.8.3
   camera: ^0.10.0+4
-
-
-
+  google_fonts: ^6.1.0
+  animated_text_kit: ^4.2.2
+  flutter_vector_icons: ^2.0.0
+  flutter_animate: ^4.2.0
+  iconsax: ^0.0.8
+  font_awesome_flutter: ^10.5.0
+  animate_do: ^3.0.2
+  flutter_spinkit: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
