--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   animate_do: ^3.0.2
   flutter_spinkit: ^5.1.0
+  intl: ^0.19.0 # Use the latest stable version
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
