--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   animate_do: ^3.0.2
   flutter_spinkit: ^5.1.0
   intl: ^0.19.0 # Use the latest stable version
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
