--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   animate_do: ^3.0.2
   flutter_spinkit: ^5.1.0
-  intl: ^0.19.0 # Use the latest stable version
+  intl: ^0.19.0 
   url_launcher: ^6.3.1
+  flutter_rating_bar: ^4.0.1 
+
 
 dev_dependencies:
   flutter_test:
