--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,3 +104,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  # Untuk menambahkan aset ke aplikasi Anda
+  assets:
+    - assets/images/ # <-- TAMBAHKAN BARIS INI
