--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   permission_handler: ^11.3.0
   path: ^1.8.3
   camera: ^0.10.0+4
-  google_fonts: ^6.1.0
   animated_text_kit: ^4.2.2
   flutter_vector_icons: ^2.0.0
   flutter_animate: ^4.2.0
@@ -33,6 +32,8 @@ dependencies:
   intl: ^0.19.0
   flutter_staggered_animations: ^1.1.1
   smooth_page_indicator: ^1.1.0 # <-- Tambahkan baris ini
+  cupertino_icons: ^1.0.6
+  google_fonts: ^6.2.1 # Pastikan versi ini atau yang lebih baru
 
 
 
