--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0 # <-- Tambahkan baris ini
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1 # Pastikan versi ini atau yang lebih baru
-
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
