--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.3.0
+  http: any
   logger: ^1.1.0
   shared_preferences: ^2.5.3
   image_picker: ^1.0.7
@@ -35,6 +35,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1 # Pastikan versi ini atau yang lebih baru
   cached_network_image: ^3.3.1
+
+  # Firebase essentials
+  firebase_core: any
+  cloud_firestore: any
+  firebase_auth: any
 
 
 dev_dependencies:
