--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,4 +4,4 @@ android.enableJetifier=true
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
-org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio1\\jbr
