--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1 # Pastikan versi ini atau yang lebih baru
   cached_network_image: ^3.3.1
+  fl_chart: ^0.68.0 # atau versi terbaru
+  dio: ^5.4.3+1 # <-- TAMBAHKAN BARIS INI (gunakan versi terbaru)
 
   # Firebase essentials
   firebase_core: any
