--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: '>=3.2.0 <4.0.0' # Memperluas jangkauan SDK untuk kompatibilitas
 
 dependencies:
   flutter:
     sdk: flutter
-  http: any
+  http: ^1.1.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
   logger: ^1.1.0
   shared_preferences: ^2.5.3
   image_picker: ^1.0.7
@@ -40,18 +40,33 @@ dependencies:
   firebase_messaging: ^15.0.3  
   flutter_local_notifications: ^17.2.1 
   
-
   # Firebase essentials
-  firebase_core: any
-  cloud_firestore: any
-  firebase_auth: any
+  firebase_core: ^3.2.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
+  cloud_firestore: ^5.1.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
+  firebase_auth: ^5.1.2 # Menentukan versi lebih spesifik lebih baik dari 'any'
   timeago: ^3.7.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0 # Versi disesuaikan dengan SDK
+
+  # 1. Deklarasi package tetap di sini
+  flutter_launcher_icons: ^0.13.1
+
+
+# 2. Blok konfigurasi dipindah ke sini, sejajar dengan 'dev_dependencies'
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21
+
 
 flutter:
   uses-material-design: true
+
+  # 3. PENAMBAHAN: Daftarkan folder assets agar gambar bisa digunakan di aplikasi
+  assets:
+    - assets/images/
