--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
 
     <application
+        android:usesCleartextTraffic="true"
         android:label="pdam_app"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
