--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.3.1
   flutter_rating_bar: ^4.0.1
-  image: ^4.1.0           # Untuk memproses dan menulis teks pada gambar
+  image: ^4.2.0           
   
   intl: ^0.19.0
   flutter_staggered_animations: ^1.1.1
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.4.3+1 
   firebase_messaging: ^15.0.3  
   flutter_local_notifications: ^17.2.1 
+  flutter_image_compress: ^2.3.0
   
   # Firebase essentials
   firebase_core: ^3.2.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
