--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.3.1
   flutter_rating_bar: ^4.0.1
-  image: ^4.2.0           
+  image: ^4.2.0       
+  google_sign_in: ^6.2.1    
   
   intl: ^0.19.0
   flutter_staggered_animations: ^1.1.1
