--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,52 +11,54 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
-  logger: ^1.1.0
+  logger: ^2.6.1
   shared_preferences: ^2.5.3
   image_picker: ^1.0.7
-  geolocator: ^10.1.0
-  geocoding: ^2.1.0
-  permission_handler: ^11.3.0
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  permission_handler: ^12.0.1
   path: ^1.8.3
-  camera: ^0.10.0+4
+  camera: ^0.11.2
   animated_text_kit: ^4.2.2
   flutter_vector_icons: ^2.0.0
   flutter_animate: ^4.2.0
   iconsax: ^0.0.8
   font_awesome_flutter: ^10.5.0
-  animate_do: ^3.0.2
+  animate_do: ^4.2.0
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.3.1
   flutter_rating_bar: ^4.0.1
-  image: ^4.2.0       
-  google_sign_in: ^6.2.1    
-  
-  intl: ^0.19.0
+  image: ^4.2.0
+  google_sign_in: ^7.2.0
+
+  intl: ^0.20.2
   flutter_staggered_animations: ^1.1.1
-  smooth_page_indicator: ^1.1.0 
+  smooth_page_indicator: ^1.1.0
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.2.1 
+  google_fonts: ^6.2.1
   cached_network_image: ^3.3.1
-  fl_chart: ^0.68.0
-  dio: ^5.4.3+1 
-  firebase_messaging: ^15.0.3  
-  flutter_local_notifications: ^17.2.1 
+  fl_chart: ^0.68.0 # <-- DIUPDATE KE VERSI TERBARU
+  dio: ^5.4.3+1
+  firebase_messaging: ^16.0.1
+  flutter_local_notifications: ^19.4.2
   flutter_image_compress: ^2.3.0
-  
+
   # Firebase essentials
-  firebase_core: ^3.2.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
-  cloud_firestore: ^5.1.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
-  firebase_auth: ^5.1.2 # Menentukan versi lebih spesifik lebih baik dari 'any'
+  firebase_core: ^4.1.0 # Menentukan versi lebih spesifik lebih baik dari 'any'
+  cloud_firestore: ^6.0.1 # Menentukan versi lebih spesifik lebih baik dari 'any'
+  firebase_auth: ^6.0.2 # Menentukan versi lebih spesifik lebih baik dari 'any'
   timeago: ^3.7.1
-  flutter_slidable: ^3.0.0 # Tambahkan package ini
+  flutter_slidable: ^4.0.1 # Tambahkan package ini
+  connectivity_plus: ^7.0.0
+ 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0 # Versi disesuaikan dengan SDK
+  flutter_lints: ^5.0.0 # Versi disesuaikan dengan SDK
 
   # 1. Deklarasi package tetap di sini
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
 
 
 # 2. Blok konfigurasi dipindah ke sini, sejajar dengan 'dev_dependencies'
@@ -73,3 +75,4 @@ flutter:
   # 3. PENAMBAHAN: Daftarkan folder assets agar gambar bisa digunakan di aplikasi
   assets:
     - assets/images/
+
