--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   image: ^4.2.0
   google_sign_in: ^7.2.0
-  google_mlkit_text_recognition: ^0.11.0 
+  google_mlkit_text_recognition: ^0.13.0
+  google_mlkit_commons: ^0.8.0
 
   intl: ^0.20.2
   flutter_staggered_animations: ^1.1.1
