--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   timeago: ^3.7.1
   flutter_slidable: ^4.0.1 # Tambahkan package ini
   connectivity_plus: ^7.0.0
+  webview_flutter: ^4.8.0
  
 
 dev_dependencies:
