--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_slidable: ^4.0.1 # Tambahkan package ini
   connectivity_plus: ^7.0.0
   webview_flutter: ^4.8.0
+  change_app_package_name: ^1.1.0  # Tambahkan baris ini
  
 
 dev_dependencies:
