--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,8 +70,9 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/icon_app.png" 
   min_sdk_android: 21
+
 
 
 flutter:
